# sphinx-github-pages-generator

./:  error_code_config.yml   .gitignore  README.rst  deploy-github-pages.py  deploy-to-github-pages-release.sh  noxfile.py  pyproject.toml  setup.py
.github/workflows/: check_documentation_build.yaml  check_setup_py.yaml  check_version.yaml  generate_pages.yml  generate_release_documentation.yaml  pytest.yml  release_droid_upload_github_release_assets.yml  run_test.yml  test-secrets-reusable-workflow.yaml
0.1.0/: .source  py-modindex.html  searchindex.js
0.1.0/_sources/: index.rst.txt  system_requirements.md.txt
0.1.0/_sources/api/: exasol_sphinx_github_pages_generator.deploy_github_pages.rst.txt  exasol_sphinx_github_pages_generator.generate_index.rst.txt  exasol_sphinx_github_pages_generator.parser.rst.txt
0.1.0/_sources/developer_guide/: developer_guide.rst.txt
0.1.0/_sources/user_guide/: user_guide.rst.txt
0.1.0/api/: exasol_sphinx_github_pages_generator.deploy_github_pages.html  exasol_sphinx_github_pages_generator.deployer.html  exasol_sphinx_github_pages_generator.html
0.1.0/changes/: changelog.html
0.1.0/user_guide/: user_guide.html
doc/: README.md  conf.py  dependencies.md  design.md  design.rst  index.rst  system_requirements.md
doc/changes/: changelog.md  changes_0.1.0.md  changes_0.1.1.md
doc/developer_guide/: developer_guide.md  developer_guide.rst
doc/scripts/: commit_pages_current.sh  commit_pages_main.sh  push_pages_current.sh  push_pages_main.sh  push_pages_release.sh
doc/user_guide/: user_guide.md  user_guide.rst
exasol_sphinx_github_pages_generator/: Parser.py  cli.py  conf.py  console.py  deploy-github-pages.py  deploy-to-github-pages-current.sh  deploy-to-github-pages-main.sh  deploy_github_pages.py  deployer.py  generate_index.py  parser.py
exasol_sphinx_github_pages_generator/templates/: index_template.html.jinja2
githooks/: install.sh
main/: .buildinfo  .source  dependencies.html  design.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  system_requirements.html
main/_sources/api/: exasol_sphinx_github_pages_generator.cli.rst.txt  exasol_sphinx_github_pages_generator.console.rst.txt  exasol_sphinx_github_pages_generator.deployer.rst.txt  exasol_sphinx_github_pages_generator.rst.txt
main/_sources/changes/: changes_0.1.0.md.txt  changes_0.1.1.md.txt
main/_sources/developer_guide/: developer_guide.rst.txt
main/_sources/user_guide/: user_guide.rst.txt
main/api/: exasol_sphinx_github_pages_generator.cli.html  exasol_sphinx_github_pages_generator.console.html  exasol_sphinx_github_pages_generator.deploy_github_pages.html  exasol_sphinx_github_pages_generator.deployer.html  exasol_sphinx_github_pages_generator.generate_index.html  exasol_sphinx_github_pages_generator.html  exasol_sphinx_github_pages_generator.parser.html
main/changes/: changelog.html  changes_0.1.0.html  changes_0.1.1.html
main/developer_guide/: developer_guide.html
main/user_guide/: user_guide.html
tests/: fixtures.py  helper_test_functions.py  test_deploy_github_pages.py  test_generate_index.py  tests_generate_index.py  testtest.py
tests/test_src/: correct_index_file_main_branch.html  input_index.html  meta_lines_correct
